@@ -28,25 +28,27 @@ modules   = bouncer ftpd free groups help invite online pretimes readlogs sitecm
 varFiles  = core.vars glftpd.vars
 themeFile = default-gl.theme
 
-#### glFTPD
+#### FTPD
 #
+# Daemon Options:
 # dataPath - Path to glFTPD's "data" directory.
 # rootPath - Path to the glFTPD directory.
 # shmKey   - glFTPD's shared memory key.
 # version  - Online structure version, must be "2.00" or "2.01".
+#
+# Sitebot Options:
 # host     - FTP server host.
 # port     - FTP server port.
 # user     - Bot user, must have siteop flag(s).
 # passwd   - Bot password.
-# secure   - Connection security, must be "ssl", "tls", or "none".
+# secure   - Connection security; must be "ssl", "tls", or "none".
 #
-[GlFtpd]
+[Ftpd]
 dataPath = /glftpd/ftp-data/
 rootPath = /glftpd/
 shmKey   = 0x0000DEAD
 version  = 2.01
 
-# FTP credentials.
 host     = 127.0.0.1
 port     = 21
 user     = !sitebot
