@@ -28,21 +28,23 @@ modules   = bouncer ftpd free groups help invite online pretimes readlogs sitecm
 varFiles  = core.vars ioftpd.vars
 themeFile = default-io.theme
 
-#### ioFTPD
+#### FTPD
 #
+# Daemon Options:
 # deleteFlag - Flag given to users when they are deleted.
 # msgWindow  - ioFTPD's message window name.
+#
+# Sitebot Options:
 # host       - FTP server host.
 # port       - FTP server port.
 # user       - Bot user, must have siteop flag(s).
 # passwd     - Bot password.
-# secure     - Connection security, must be "ssl", "tls", or "none".
+# secure     - Connection security; must be "ssl", "tls", or "none".
 #
-[IoFtpd]
+[Ftpd]
 deleteFlag = 6
 msgWindow  = ioFTPD::MessageWindow
 
-# FTP credentials.
 host       = 127.0.0.1
 port       = 21
 user       = !sitebot
